--- a/ТРПО4/ТРПО4.csproj
+++ b/ТРПО4/ТРПО4.csproj
@@ -103,8 +103,17 @@
     <Compile Include="Pages\CustomerMenu.xaml.cs">
       <DependentUpon>CustomerMenu.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Pages\DobNas.xaml.cs">
+      <DependentUpon>DobNas.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Pages\Nas_pynkt.xaml.cs">
+      <DependentUpon>Nas_pynkt.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Pages\Page2.xaml.cs">
       <DependentUpon>Page2.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Pages\Special%27nost%27.xaml.cs">
+      <DependentUpon>Special%27nost%27.xaml</DependentUpon>
     </Compile>
     <Compile Include="Shkola2.cs">
       <DependentUpon>Model.tt</DependentUpon>
@@ -157,7 +166,19 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="Pages\DobNas.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Pages\Nas_pynkt.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Pages\Page2.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Pages\Special%27nost%27.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
